# QtMediaPlayer

./: .gitattributes  Actions.qml  AudioControl.qml  CMakeLists.txt  Content.qml  Dialogs.qml  ExchangeImage  Main.qml  Main.qml.autosave  MenuButton.qml  PlaybackControl.qml  PlaybackRateControl.qml  PlaybackSeekControl.qml  README.md  Resources.qrc  Resources_BASE_6470.qrc  Resources_LOCAL_6470.qrc  Resources_REMOTE_6470.qrc  RoundImage.qml  Show.qml  Window.qml  barrage.qml  images.qrc  imgs.qrc  listitem.h  main.cpp  modelimageprovider.cpp  modelimageprovider.h  mysql.cpp  mysql.h  playlistitem.cpp  playlistitem.h  playlistmodel.cpp  playlistmodel.h  qthumbnail.cpp  qthumbnail.h  recentfileitem.cpp  recentfileitem.h  recentfilesmodel.cpp  recentfilesmodel.h
introduce/document/: User_Introduction.docx  development_info_doc.docx  user_use_introduce_doc.docx
qml/: Main.qml
qml/components/: BackGround.qml  Barrage.qml  BullectSettingDrawer.qml  BulletscreenComponent.qml  DataSlider.qml  HomeToolButton.qml  LayoutHearderView.qml  MenuButton.qml  PlayFileList.qml  PlayListItem.qml  RoundImage.qml  Show.qml  SubtitleRec.qml  VideoBannerView.qml  VideoControl.qml  VideoDisplayComponent.qml  VideoGridHotView.qml  VideoTitleBar.qml
qml/logic/: HomeToolTip.qml
qml/model/: DetailRecommendPageView.qml
qml/pages/: AboutPage.qml  HomePage.qml  PlayerPage.qml  SettingPage.qml
src/: bulletxml.cpp  bulletxml.h  listitem.h  main.cpp  modelimageprovider.h  playlistitem.cpp  playlistitem.h  playlistmodel.cpp  playlistmodel.h  qsubtitleprovider.cpp  qsubtitleprovider.h  qthumbnail.cpp  qthumbnail.h  recentfileitem.cpp  recentfileitem.h  recentfilesmodel.cpp  recentfilesmodel.h
